--- a/react/app/package.json
+++ b/react/app/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.5.0",
     "react-router-dom": "^4.3.1",
     "style-loader": "^0.23.0",
+    "typeface-roboto": "0.0.54",
     "webpack": "^4.18.1",
     "webpack-dev-server": "^3.1.8"
   },
