--- a/react/app/package.json
+++ b/react/app/package.json
@@ -17,6 +17,7 @@
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-router-dom": "^4.3.1",
+    "react-select": "^2.1.0",
     "style-loader": "^0.23.0",
     "typeface-roboto": "0.0.54",
     "webpack": "^4.18.1",
