--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/react:16.5.0
+      - image: circleci/node:8.9
 
     steps:
       - checkout
