--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,19 +6,19 @@ jobs:
 
     steps:
       - checkout
-
-      - add_ssh_keys:
-          fingerprints:
-            - "45:bd:b8:3a:ca:f7:70:7c:0e:01:f5:3e:b4:75:79:91"
-
-      - run:
-          name: Start ssh-keyscan
-          command: |
-            ssh-keyscan ${HOST_NAME} >> ~/.ssh/known_hosts
-
-      - deploy:
-          name: Start master deploy
-          command: |
-            if [ "${CIRCLE_BRANCH}" == "master" ]; then
-                rsync -av --delete --exclude='.git' --exclude='.circleci' ./ ${USER_NAME}@${HOST_NAME}:/var/www/html/
-            fi
+      - run: echo "A first hello"
+      # - add_ssh_keys:
+      #     fingerprints:
+      #       - "45:bd:b8:3a:ca:f7:70:7c:0e:01:f5:3e:b4:75:79:91"
+      #
+      # - run:
+      #     name: Start ssh-keyscan
+      #     command: |
+      #       ssh-keyscan ${HOST_NAME} >> ~/.ssh/known_hosts
+      #
+      # - deploy:
+      #     name: Start master deploy
+      #     command: |
+      #       if [ "${CIRCLE_BRANCH}" == "master" ]; then
+      #           rsync -av --delete --exclude='.git' --exclude='.circleci' ./ ${USER_NAME}@${HOST_NAME}:/var/www/html/
+      #       fi
