--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,11 +6,13 @@ jobs:
 
     steps:
       - checkout
-      - run: echo "A first hello"
+      # - run: echo "A first hello"
       # - add_ssh_keys:
       #     fingerprints:
       #       - "45:bd:b8:3a:ca:f7:70:7c:0e:01:f5:3e:b4:75:79:91"
       #
+      - run: yarn install
+      - run: yarn run build
       # - run:
       #     name: Start ssh-keyscan
       #     command: |
