--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,8 +11,8 @@ jobs:
       #     fingerprints:
       #       - "45:bd:b8:3a:ca:f7:70:7c:0e:01:f5:3e:b4:75:79:91"
       #
-      - run: yarn install
-      - run: yarn run build
+      - run: npm install
+      - run: npm run build
       # - run:
       #     name: Start ssh-keyscan
       #     command: |
