--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,33 +1,35 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/repo
+    # working_directory: ./
     docker:
       - image: circleci/node:8.9
 
     steps:
       - checkout
-      - restore_cache:
-          key: projectname-{{ .Branch }}-{{ checksum "yarn.lock" }}
-      - run:
-          name: System information
-          command: |
-            echo "Node $(node -v)"
-            echo "Yarn v$(yarn --version)"
-      - run:
-          name: Install dependencies
-          command: yarn
-      - run:
-          name: Build
-          command: yarn run build
-      - run:
-          name: Test
-          command: yarn test
-      - save_cache:
-          key: projectname-{{ .Branch }}-{{ checksum "yarn.lock" }}
-          paths:
-            - ~/workspace/node_modules
-            - ~/.cache/yarn/
+      - run
+          command: ls
+      # - restore_cache:
+      #     key: projectname-{{ .Branch }}-{{ checksum "yarn.lock" }}
+      # - run:
+      #     name: System information
+      #     command: |
+      #       echo "Node $(node -v)"
+      #       echo "Yarn v$(yarn --version)"
+      # - run:
+      #     name: Install dependencies
+      #     command: yarn
+      # - run:
+      #     name: Build
+      #     command: yarn run build
+      # - run:
+      #     name: Test
+      #     command: yarn test
+      # - save_cache:
+      #     key: projectname-{{ .Branch }}-{{ checksum "yarn.lock" }}
+      #     paths:
+      #       - ~/workspace/node_modules
+      #       - ~/.cache/yarn/
       # - run: echo "A first hello"
       # - add_ssh_keys:
       #     fingerprints:
